Bux fix some attributes added